limit #canvasContainer width to fix overflow

--- a/src/components/RightColumn.css
+++ b/src/components/RightColumn.css
@@ -27,6 +27,7 @@
 
 #canvasContainer{
     margin-top: 5%;
+    max-width: 350px;
 }
 
 #right-column canvas{
